--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier": "^3.4.2"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
+    "*.js": "eslint --fix",
     "*.{js,css,md}": "prettier --write"
   }
 }
